--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 
 # dependencies
 /node_modules
-
+package-lock.json
 # profiling files
 chrome-profiler-events.json
 speed-measure-plugin.json
@@ -45,4 +45,5 @@ testem.log
 .DS_Store
 Thumbs.db
 
+# Environment Files
 .env
