--- a/flask-server/Dockerfile
+++ b/flask-server/Dockerfile
@@ -14,6 +14,8 @@ LABEL maintainer="Mohammad Ahmad"
 RUN pip install flask
 COPY . /app
 WORKDIR /app
+# RUN pip install -r requirements.txt
 RUN pip install -r requirements.txt
 ENTRYPOINT ["python"]
 CMD ["app.py"]
+# ENTRYPOINT ["python", "app.py"]
