Integrate postgres with Flask

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,11 @@ services:
       - PG_PORT=5432
       - PG_USERNAME=${PG_USER}
       - PG_PASSWORD=${PG_PWD}
+    links:
+      - postgres
+    depends_on:
+      - postgres
+
   angular:
     container_name: angular
     build:
@@ -30,14 +35,17 @@ services:
       - PG_USERNAME=${PG_USER}
       - PG_PASSWORD=${PG_PWD}
       - RUN_MIGRATIONS=true
+    depends_on:
+      - postgres
+      - flask
   
   postgres:
     container_name: postgres
     image: postgres:11-alpine
     volumes:
-      - pg-data:/var/lib/postgresql/data
+      - /Volumes/Media/dev/Workspaces/qMe/pgData:/var/lib/postgresql/data
     ports:
-      - '5432:5432'
+      - '32000:5432'
     environment:
       - PG_USERNAME=${PG_USER}
       - PG_PASSWORD=${PG_PWD}
